--- a/ec/Gemfile
+++ b/ec/Gemfile
@@ -72,3 +72,6 @@ end
 gem "rubocop", "~> 1.75", groups: [ :development, :test ], require: false
 
 gem "ruby-lsp", "~> 0.23.13", group: :development, require: false
+
+gem "dartsass-rails"
+gem "bootstrap"
